# lamba

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tv-scripts.md
app/: celery.py  config.py  models.py  tasks.py
app/strategies/: trend_duration.py
app/utils/: indicators.py  logger.py
